initialize(): throw IllegalActionExceptions with useful error messages when things go wrong.  Also, correctly generate a URL for the URLClassLoader.